# Non-Profit-Language-Processing

./: Cleaned Reels Data.xlsx  CleanedPosts.xlsx  README.md  pyproject.toml
Data Cleaning/: Cleaning_Donation_Data.ipynb  Combining_Dataframe.py  Linkedin_Post_Cleaning.py  Post_Cleaning.py  Reels_Cleaning.py
Data Cleaning/Cleaned Output Files/: Cleaned LinkedIn Data 11.xlsx  Cleaned LinkedIn Data.xlsx  Cleaned Reels Data 11.xlsx  Cleaned Reels Data.xlsx  CleanedPosts 11.xlsx  CleanedPosts.xlsx
Data Cleaning/Cleaned Output Files/data/: Cleaned LinkedIn Data 12.xlsx  CleanedPosts 12.xlsx  CleanedPosts.xlsx
Data Cleaning/data/: Cleaned LinkedIn Data.xlsx  Cleaned Reels Data 12.xlsx  Cleaned Reels Data.xlsx
Data Cleaning/data/Raw Data Files/: posts.json  reels.json
Data Preprocessing/: Sentinement_Analysis.py
Model/: Sentinement_Analysis.py  features.py
Raw Data Files/: bethlehem-haven_content_LinkedInData_01_23__01_24 (1).xls  email_campaigns_report_Contant_Contact.csv
